Bug 44402 - key board navigation broken in Tools > Options
Summary: key board navigation broken in Tools > Options
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
Master old -3.6
Hardware: Other All
: medium normal
Assignee: August Sodora
URL:
Whiteboard:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2012-01-02 13:46 UTC by Cor Nouws
Modified: 2012-01-22 04:06 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Cor Nouws 2012-01-02 13:46:58 UTC
Start Tools > Options
arrow down to navigate to next section 

previously, arrow up + left would fold that section.

Now it doesn't and it's no longer possible to navigate to previous section.

(Needless to say I alsways navigate by keys)
Comment 1 Cor Nouws 2012-01-02 13:51:25 UTC
 NB
LibreOffice 3.6.0alpha0+ 
Build ID: e0e52ce-7ef74e0-6f9c6e1-libreoffice-3-5
	branch-point

I guess commit 8e0792e9593115045f561d07576ff63700c782c0 is related ;-)
August, could you pls have a look?
Comment 2 August Sodora 2012-01-03 11:59:19 UTC
Ok it seems that the current behavior of "click on a category, automatically select the navigation entry in the tree" is probably broken. What should probably happen is that a user should be able to select a category, and it would just choose the first tab page to display without actually changing the selection in the navigation tree on the left. This way the user would be able to navigate freely with the arrow keys.

I don't see an easy way to make this work with the existing patch, I'll have to try a slightly new approach. Is it possible to revert this until a better solution can be found? Maybe the ux list should be consulted?
Comment 3 Cor Nouws 2012-01-03 15:10:40 UTC
Hi August,

(In reply to comment #2)

> What should
> probably happen is that a user should be able to select a category, and it
> would just choose the first tab page to display without actually changing the
> selection in the navigation tree on the left. This way the user would be able
> to navigate freely with the arrow keys.

Yes, including using the left/right keys to fold/unfold the category in the tree view.
So focus on first entry and left arrow, brings focus on category with still same options page visible, left arrow again folds the tree.


> I don't see an easy way to make this work with the existing patch, I'll have to
> try a slightly new approach. Is it possible to revert this until a better
> solution can be found? Maybe the ux list should be consulted?

Might not be necessary to ask UX if it can work as described, IMO.
And since the patch is not in the 3.5 branch, there might be abundant time to improve this before 3.6.0 beta0 ;-)