fdo#44402: make keyboard navigation work again in Tools->Options